# type-annotation

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: typing.yml
challenges/01_basic/: basic_any.py  basic_dict.py  basic_final.py  basic_kwargs.py  basic_list.py  basic_optional.py  basic_parameter.py  basic_return.py  basic_tuple.py  basic_typealias.py  basic_union.py  basic_variable.py
challenges/02_intermediate/: intermediate_await.py  intermediate_callable.py  intermediate_class_var.py  intermediate_decorator.py  intermediate_empty_tuple.py  intermediate_generic.py  intermediate_generic2.py  intermediate_generic3.py  intermediate_instance_var.py  intermediate_literal.py  intermediate_literalstring.py  intermediate_self.py  intermediate_typed_dict.py  intermediate_typed_dict2.py  intermediate_typed_dict3.py  intermediate_unpack.py
challenges/03_advanced/: advanced_buffer.py  advanced_callable_protocol.py  advanced_decorator.py  advanced_descriptor.py  advanced_forward.py  advanced_generator.py  advanced_generic_class.py  advanced_never.py  advanced_never2.py  advanced_overload.py  advanced_overload_literal.py  advanced_paramspec.py  advanced_protocol.py  advanced_recursive.py  advanced_type.py  advanced_typed_dict.py  advanced_typeguard.py  advanced_typeshed.py  advanced_variadic_generics.py
challenges/04_extreme/: extreme_concatenate.py  extreme_constructor.py  extreme_self_casting.py  extreme_variance.py
